apphub/kubernetes/overlays/eks/patch-apphub-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: proxy-app-hub
spec:
  volumes:
    - $patch: replace
    - name: nginx-conf
      emptyDir: {}
    - name: srv
      persistentVolumeClaim:
        claimName: t4hub-config-pvc
  containers:
    - name: app-hub
      image: 474930672109.dkr.ecr.eu-west-1.amazonaws.com/t4hub/app-hub:latest
      imagePullPolicy: Always
      volumeMounts:
        - mountPath: /app/proxy
          name: nginx-conf
        - mountPath: /srv
          name: srv
      resources:
        requests:
          memory: "1Gi"
          cpu: "2000m"
        limits:
          memory: "4Gi"
          cpu: "8000m"
      livenessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 60
        periodSeconds: 30
      readinessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 10
        periodSeconds: 10
    - name: nginx-container
      resources:
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits:
          memory: "512Mi"
          cpu: "1000m"
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 10
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 5
